--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,17 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <script src="/js/jquery.min.js"></script>
+
+    <!-- Include Popper.js -->
+    <script src="/js/popper.js"></script>
+
+    <!-- Include Bootstrap -->
+    <script src="/js/bootstrap.min.js"></script>
+
+    <!-- Include Your Custom JavaScript -->
+    <script src="/js/main.js"></script>
   </head>
   <body>
     <noscript>
